--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <body>
         <header>
             <a href="#" class="logo">Good<span>.</span></a>
+            <div class="menuToggle" onclick="toggleMenu()"></div>
             <ul class="navigation">
-                <li><a href="#banner">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#menu">Menu</a></li>
-                <li><a href="#expert">Expert</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#banner" onclick="toggleMenu()">Home</a></li>
+                <li><a href="#about" onclick="toggleMenu()">About</a></li>
+                <li><a href="#menu" onclick="toggleMenu()">Menu</a></li>
+                <li><a href="#expert" onclick="toggleMenu()">Expert</a></li>
+                <li><a href="#testimonials" onclick="toggleMenu()">Testimonials</a></li>
+                <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
             </ul>
         </header>
         <section class="banner" id="banner">
@@ -188,7 +189,7 @@
             </div>
         </section>
 
-        <section class="contant" id="contact">
+        <section class="contact" id="contact">
             <div class="title">
                 <h2 class="titleText"><span>C</span>ontact Us</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -219,6 +220,13 @@
                 const header = document.querySelector("header");
                 header.classList.toggle("sticky", window.scrollY>0);
             })
+
+            function toggleMenu(){
+                const menuToggle = document.querySelector(".menuToggle");
+                const navigation = document.querySelector(".navigation");
+                menuToggle.classList.toggle("active");
+                navigation.classList.toggle("active");
+            }
         </script>
     </body>
 </html>
