--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <li><a href="#banner" onclick="toggleMenu()">Home</a></li>
                 <li><a href="#about" onclick="toggleMenu()">About</a></li>
                 <li><a href="#menu" onclick="toggleMenu()">Menu</a></li>
-                <li><a href="#expert" onclick="toggleMenu()">Expert</a></li>
                 <li><a href="#testimonials" onclick="toggleMenu()">Testimonials</a></li>
                 <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
             </ul>
@@ -171,7 +170,7 @@
         </section>
 
         <div class="copyrightText">
-            <p>Copyright 2020 <a href="#">Online</a>. All Right Reserved</p>
+            <p>© Copyright 2022 <a href="#">Online</a>. All Right Reserved</p>
         </div>
 
         <script type="text/javascript">
