--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
                 <li><a href="#menu" onclick="toggleMenu()">Menu</a></li>
                 <li><a href="#testimonials" onclick="toggleMenu()">Testimonials</a></li>
                 <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+                <li id="listbreak">|</li>
+                <li><a href="manage.php" onclick="toggleMenu()">Manage Products</a></li>
             </ul>
         </header>
             <section class="banner" id="banner">
@@ -117,7 +119,7 @@
             <div class="content">
                 <div class="box">
                     <div class="imgBx">
-                        <img src="/Images/testi2.jpg">
+                        <img src="Images/testi2.jpg">
                     </div>
                     <div class="text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ipsum sed minus harum similique a ducimus quia. Saepe quisquam molestias vitae eligendi quam? Quibusdam impedit porro voluptas, explicabo optio soluta!</p>
@@ -127,7 +129,7 @@
             <div class="content">
                 <div class="box">
                     <div class="imgBx">
-                        <img src="/Images/testi3.jpg">
+                        <img src="Images/testi3.jpg">
                     </div>
                     <div class="text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ipsum sed minus harum similique a ducimus quia. Saepe quisquam molestias vitae eligendi quam? Quibusdam impedit porro voluptas, explicabo optio soluta!</p>
@@ -137,7 +139,7 @@
             <div class="content">
                 <div class="box">
                     <div class="imgBx">
-                        <img src="/Images/testi1.jpg">
+                        <img src="Images/testi1.jpg">
                     </div>
                     <div class="text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam ipsum sed minus harum similique a ducimus quia. Saepe quisquam molestias vitae eligendi quam? Quibusdam impedit porro voluptas, explicabo optio soluta!</p>
